# WeatherApp

./: CMakeLists.txt  README.md  main.cpp  weatherapp.cpp  weatherapp.h  weatherapp.ui
images/: sol.png:Zone.Identifier
